# python-project-lvl4

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pyci.yml
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
static/css/: cover.css
task_manager/: mixins.py  settings.py  tests.py  urls.py  utils.py  views.py  wsgi.py
task_manager/fixtures/browser/: test_data.json
task_manager/fixtures/tasks/: db_statuses.json  db_tasks.json  db_users.json  test_tasks.json  test_users.json
task_manager/fixtures/users/: test_users_data.json
task_manager/labels/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templatetags/: get_filter_url_label_tags.py
task_manager/statuses/: admin.py  apps.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0003_alter_status_name.py
task_manager/tasks/: admin.py  apps.py  filters.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_auto_20210423_1839.py  0003_alter_tasks_creator.py  0004_alter_tasks_name.py  0005_alter_tasks_name.py  0006_auto_20210427_1859.py  (+2 more)
task_manager/templates/: base.html  index.html  layout.html
task_manager/tests/: test_i18.py
task_manager/users/: admin.py  apps.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
(+30 files in other folders)
